# forky_alongside-ai

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  env.example  main.py  pyproject.toml  test_server.py
app/: main.py
app/api/v1/: documents.py  evaluate.py  keywords.py  questions.py
app/core/: config.py  exceptions.py  logging.py  middleware.py
app/models/: schemas.py
app/services/: document_service.py  evaluation_service.py  keyword_service.py  llm_service.py  overall_evaluation_service.py  question_service.py
deployment/: deploy.md  forky.service
example_file/: .env-sample  chat.py  document_parsing.py
examples/: simple_workflow.py
scripts/: dev.sh  install.sh  start.sh  test.sh
