[project]
name = "forky"
version = "0.1.0"
description = "AI Interview Practice System Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "openai>=1.52.2",
    "requests>=2.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "langfuse>=2.54.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/your-repo/forky_alongside-ai"
Documentation = "https://github.com/your-repo/forky_alongside-ai#readme"
Repository = "https://github.com/your-repo/forky_alongside-ai"
Issues = "https://github.com/your-repo/forky_alongside-ai/issues"
